[package]
name = "e_to_e_server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["ws"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
chrono = "0.4.41"
dotenv = "0.15.0"
futures-util = "0.3.31"
hyper = { version = "1", features = ["server", "http1"] }
getrandom = "0.2"
password-hash = "0.5.0"
postgres = "0.19.10"
rand = "0.9.1"
rcgen = "0.13.2"
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-rustls = "0.26.2"
tokio-stream = {version = "0.1.17", features = ["net"]}
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
